fix(article): color contrast

--- a/src/styles/_variables.css
+++ b/src/styles/_variables.css
@@ -3,7 +3,7 @@
   * Colors
   */
   --dark: hsl(24deg, 9%, 10%);
-  --grey: hsl(25deg, 5%, 44%);
+  --grey: hsl(25deg, 5%, 42%);
   --grey-300: hsl(25deg, 6%, 85%);
   --grey-200: hsl(20deg, 6%, 90%);
   --grey-100: hsl(60deg, 4%, 95%);
